<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_questionnaire"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hackfresno17.myapplication.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allergies"
        android:textColor="#212121" />

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.33"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergy1" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergy2" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergy3" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergy4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.33"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergy5"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergy6" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergy7" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergy8" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.33"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergy9" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergy10" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergy11" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergy12" />

    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/dolla1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textOn="@string/dollar1"
            android:textOff="@string/dollar1"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:background="@drawable/dollar_selector"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="2.5dp"
            />
        <ToggleButton style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/dolla2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textOn="@string/dollar2"
            android:textOff="@string/dollar2"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:background="@drawable/dollar_selector"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            />
        <ToggleButton style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/dolla3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textOn="@string/dollar3"
            android:textOff="@string/dollar3"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:background="@drawable/dollar_selector"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"

            />
        <ToggleButton style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/dolla4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:textOn="@string/dollar4"
            android:textOff="@string/dollar4"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:background="@drawable/dollar_selector"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="2.5dp"
            android:layout_marginEnd="5dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/start_suggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>